<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sleepyness"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custombg"
    android:orientation="vertical"
    tools:context=".music">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/fixnav">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/tranquil"></ImageView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <Button
            android:id="@+id/instrumental"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/app_button_color"
            android:paddingVertical="30dp"
            android:text="Instrumental"
            android:textColor="#ffffff"
            android:textSize="20dp"
            app:cornerRadius="20dip" />

        <Button
            android:id="@+id/relax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttontextcolor"
            android:backgroundTint="@color/white"
            android:paddingVertical="30dp"
            android:text="@string/relax"
            android:textColor="@color/purple_500"
            android:textSize="20dp"
            app:cornerRadius="20dip"
            app:strokeColor="@color/app_button_color"
            app:strokeWidth="4dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="0dp">


        <Button
            android:id="@+id/upbeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttontextcolor"
            android:backgroundTint="@color/white"
            android:paddingVertical="30dp"
            android:text="@string/upbeat"
            android:textColor="@color/purple_500"
            android:textSize="20dp"
            app:cornerRadius="20dip"
            app:strokeColor="@color/app_button_color"
            app:strokeWidth="4dp" />

        <Button
            android:id="@+id/slow_jazz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/app_button_color"
            android:paddingVertical="30dp"
            android:text="@string/slow_jazz"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="20dip" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="0dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/app_button_color"
            android:paddingVertical="30dp"
            android:text="@string/sleepyness"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="20dip" />

        <Button
            android:id="@+id/lo_fi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttontextcolor"
            android:backgroundTint="@color/white"
            android:paddingVertical="30dp"
            android:text="@string/lo_fi"
            android:textColor="@color/purple_500"
            android:textSize="20dp"
            app:cornerRadius="20dip"
            app:strokeColor="@color/app_button_color"
            app:strokeWidth="4dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="0dp">


        <Button
            android:id="@+id/meditation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttontextcolor"
            android:backgroundTint="@color/app_button_color"
            android:paddingVertical="30dp"
            android:text="@string/meditation_music"
            android:textColor="@color/purple_500"
            android:textSize="20dp"
            app:cornerRadius="20dip" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="0dp">


        <Button
            android:id="@+id/chill_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/app_button_color"
            android:paddingVertical="30dp"
            android:text="@string/chill_out_music"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="20dip" />

    </LinearLayout>

</LinearLayout>